--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d71671e1
-	base = c75226aa
+	base = a5152bee
 	trim = clearpath_control
-	trimbase = 
+	trimbase = c75226aa
