--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d71671e1
-	base = 77257905
+	base = 2786ef07
 	trim = clearpath_description
-	trimbase = 
+	trimbase = 77257905
