--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d71671e1
-	base = ac14c4ee
+	base = 7f85dee6
 	trim = clearpath_platform_description
-	trimbase = 
+	trimbase = ac14c4ee
