--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d71671e1
-	base = 0337b28b
+	base = 0ceb4e2b
 	trim = clearpath_generator_common
-	trimbase = 
+	trimbase = 0337b28b
