--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d71671e1
-	base = d893ed18
+	base = 05740774
 	trim = clearpath_mounts_description
-	trimbase = 
+	trimbase = d893ed18
