--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d71671e1
-	base = d2009833
+	base = 9ec19461
 	trim = clearpath_manipulators_description
-	trimbase = 
+	trimbase = d2009833
