--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d71671e1
-	base = 2d31fce2
+	base = beb7ec92
 	trim = clearpath_common
-	trimbase = 
+	trimbase = 2d31fce2
