--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d71671e1
-	base = daa483ab
+	base = 61ee3a92
 	trim = clearpath_bt_joy
-	trimbase = 
+	trimbase = daa483ab
