--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d71671e1
-	base = 622ece54
+	base = 4dc57e54
 	trim = clearpath_customization
-	trimbase = 
+	trimbase = 622ece54
