--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d71671e1
-	base = 781128ac
+	base = e50eeca6
 	trim = clearpath_manipulators
-	trimbase = 
+	trimbase = 781128ac
