--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d71671e1
-	base = 2a01bd6e
+	base = 2ad57bcf
 	trim = clearpath_sensors_description
-	trimbase = 
+	trimbase = 2a01bd6e
